Documentation a some corrections
